--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="http://fastly.ink.sapo.pt/3.1.10/css/ink.css"> <!-- inks css file -->
     <script type="text/javascript" src="http://fastly.ink.sapo.pt/3.1.10/js/ink-all.js"></script> <!-- inks js bundle -->
 
-    <title>Blizzard News</title>
+    <title>Dewey</title>
   </head>
   <body>
     <noscript>
